--- a/azure-pipelines/config/debian-mirrors.config
+++ b/azure-pipelines/config/debian-mirrors.config
@@ -1,6 +1,6 @@
 jessie	debian	http://deb.debian.org/debian	jessie,jessie-updates	contrib,non-free,main	amd64,armhf
 stretch	debian	http://deb.debian.org/debian	stretch,stretch-updates,stretch-backports	contrib,non-free,main	amd64,armhf,arm64
 buster	debian	http://deb.debian.org/debian	buster,buster-updates,buster-backports	contrib,non-free,main	amd64,armhf,arm64
-jessie-security debian-security  http://security.debian.org/debian-security  buster/updates  contrib,non-free,main   amd64,armhf
-stretch-security debian-security  http://security.debian.org/debian-security  buster/updates  contrib,non-free,main   amd64,armhf,arm64
+jessie-security debian-security  http://security.debian.org/debian-security  jessie/updates  contrib,non-free,main   amd64,armhf
+stretch-security debian-security  http://security.debian.org/debian-security  stretch/updates  contrib,non-free,main   amd64,armhf,arm64
 buster-security	debian-security	http://security.debian.org/debian-security	buster/updates	contrib,non-free,main	amd64,armhf,arm64
