--- a/azure-pipelines/templates/debian-mirror-migrate-primary.yml
+++ b/azure-pipelines/templates/debian-mirror-migrate-primary.yml
@@ -1,11 +1,6 @@
-parameters:
-- name: 'cdnReplicaOriginPriority'
-  type: string
-  default: '3'
-- name: 'purgeContent'
-  type: string
-  default: 'y'
 steps:
 - template: ../templates/debian-mirror-init-agent.yml
 - template: ../templates/debian-mirror-init-storage.yml
 - template: ../templates/debian-mirror-migrate-cdn-replica.yml
+  parameters:
+    cdnReplicaOriginPriority: '3'
