--- a/azure-pipelines/templates/debian-mirror-migrate-replica.yml
+++ b/azure-pipelines/templates/debian-mirror-migrate-replica.yml
@@ -7,6 +7,8 @@ steps:
     migrate_cdn_replica=n
     mirror_names=$(cat work/_aptly/mirror_names)
     export IFS=","
+    ls -l work/publish
+    ls -l work/publish/versions/
     for mirror_name in $mirror_names; do
         db_version=none
         publish_version=
