--- a/azure-pipelines/templates/debian-mirror-init.yml
+++ b/azure-pipelines/templates/debian-mirror-init.yml
@@ -9,6 +9,7 @@ steps:
   displayName: 'Set lock file'
 - bash: |
     MIRROR_VERSION=$(date +%Y%m%d%H%M%S-%N)
+    echo "The the next Mirror version is $MIRROR_VERSION"
     echo "##vso[task.setvariable variable=MirrorVersion;isOutput=true]$MIRROR_VERSION"
   name: InitStep
 - bash: |
