--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-eastus.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-eastus.yml
@@ -18,7 +18,7 @@ variables:
 - name: StorageAccount
   value: 'sonicstoragepublic2'
 - name: StorageAccountSasToken
-  value: $[variables.Test-A]
+  value: $['variables.Test-A']
 - name: StorageAccountReplica
   value: 'sonicstoragepublic3'
 - name: StorageAccountReplicaSasToken
