Update publish-debian-mirror-eastus.yml for Azure Pipelines

--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-eastus.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-eastus.yml
@@ -23,6 +23,8 @@ variables:
   value: 'sonicstoragepublic3'
 - name: StorageAccountReplicaSasToken
   value: $['variables.sonicstoragepublic3-SasToken']
+- name: sonicstoragepublic3-SasToken1
+  value: ''
 stages:
 - stage: InitStage
   jobs:
