--- a/azure-pipelines/templates/debian-mirror-init.yml
+++ b/azure-pipelines/templates/debian-mirror-init.yml
@@ -1,6 +1,8 @@
 steps:
 - template: ../templates/debian-mirror-init-agent.yml
 - template: ../templates/debian-mirror-init-storage.yml
+  parameters:
+    nfsMountPoint: $(NFSVolumn)
 - bash: |
     set -e
     APTLY_LOCK_PATH=work/_aptly/.lockdir
