Update publish-debian-mirror-westus2.yml for Azure Pipelines

--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-westus2.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-westus2.yml
@@ -6,7 +6,7 @@
 trigger:
 - main
 
-pool: sonic-mirror-build-1
+pool: sonic-mirror-build
 variables:
 - group: SONiC-Azure-Key-Vault
 - group: SONiC-Mirror-US-West2-1
