Update publish-debian-mirror-westus2.yml for Azure Pipelines

--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-westus2.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-westus2.yml
@@ -94,7 +94,7 @@ stages:
     steps:
     - template: ../templates/debian-mirror-migrate-primary.yml
 - stage: CleanUp
-  condition: always()
+  condition: succeeded('InitStage')
   jobs:
   - job: CleanUp
     steps:
