--- a/azure-pipelines/templates/debian-mirror-migrate-primary.yml
+++ b/azure-pipelines/templates/debian-mirror-migrate-primary.yml
@@ -1,6 +1,8 @@
 steps:
 - template: ../templates/debian-mirror-init-agent.yml
 - template: ../templates/debian-mirror-init-storage.yml
+  parameters:
+    nfsMountPoint: '/$(NFSName)'
 - template: ../templates/debian-mirror-migrate-cdn-replica.yml
   parameters:
     cdnReplicaOriginPriority: '4'
