--- a/azure-pipelines/mirrors/publish-web-mirror-useast.yml
+++ b/azure-pipelines/mirrors/publish-web-mirror-useast.yml
@@ -26,6 +26,5 @@ stages:
     steps:
     - template: ../templates/web-mirror-init-storage.yml
     - bash: |
-        echo "hello"
         azure-pipelines/scripts/mirror/publish-web-mirror.sh
-      displayName: ""
+      displayName: "Publish Web Mirror"
