Update test.yml for Azure Pipelines

--- a/azure-pipelines/mirrors/test.yml
+++ b/azure-pipelines/mirrors/test.yml
@@ -21,8 +21,8 @@ parameters:
 stages:
 - stage: Build
   jobs:
-  - ${{ each platform in parameters.platforms }}:
-    job: ${{ format('Publish_mirror_{0}', platform.key) }}
+  ${{ each platform in parameters.platforms }}:
+  - job: ${{ format('Publish_mirror_{0}', platform.key) }}
     timeoutInMinutes: 0
     steps:
     - bash: |
