--- a/azure-pipelines/templates/test-template.yml
+++ b/azure-pipelines/templates/test-template.yml
@@ -21,7 +21,7 @@ jobs:
   - ${{ each pair in parameters.publishjob }}:
       ${{ if and(ne(pair.key, 'steps'), ne(pair.key, 'job')) }}:
         ${{ pair.key }}: ${{ pair.value }}
-    job: ${{ format('Publish_mirror_{0}', replace(mirrorName, '-', '_')) }}
+    job: ${{ format('Publish_mirror_{0}', 'test') }}
     timeoutInMinutes: 0
     steps:
     - bash: |
