--- a/azure-pipelines/templates/test-template.yml
+++ b/azure-pipelines/templates/test-template.yml
@@ -25,4 +25,5 @@ jobs:
     steps:
     - bash: |
         echo "pre-step"
+        echo "platform.value=${{ platform.value }}"
       displayName: 'pre-step'
