--- a/azure-pipelines/templates/test-template.yml
+++ b/azure-pipelines/templates/test-template.yml
@@ -17,10 +17,7 @@ parameters:
         echo "test"
 jobs:
 - ${{ each platform in parameters.platforms }}:
-  - ${{ each pair in parameters.publishjob }}:
-      ${{ if and(ne(pair.key, 'steps'), ne(pair.key, 'job')) }}:
-        ${{ pair.key }}: ${{ pair.value }}
-    job: ${{ format('Publish_mirror_{0}', platform.value) }}
+  - job: ${{ format('Publish_mirror_{0}', platform.value) }}
     timeoutInMinutes: 0
     steps:
     - bash: |
