--- a/azure-pipelines/templates/test-template.yml
+++ b/azure-pipelines/templates/test-template.yml
@@ -20,12 +20,7 @@ jobs:
   - job: ${{ format('Publish_mirror_{0}', platform.name) }}
     timeoutInMinutes: 0
     steps:
-    ${{ if ne(platform.prestep, '') }}:
-      bash: ${{ platform.prestep }}
-      displayName: 'pre-step'
-    ${{ if ne(platform.targets, '') }}:
-      bash: |
-        echo "pre-step"
-        echo "platform.key=${{ platform.key }}"
-        echo "platform.value=${{ platform.value }}"
-      displayName: 'pre-step'
+    - ${{ if ne(platform.targets, '') }}:
+      - bash: |
+          echo "pre-step"
+        displayName: 'pre-step'
