--- a/azure-pipelines/templates/test-template.yml
+++ b/azure-pipelines/templates/test-template.yml
@@ -20,6 +20,10 @@ jobs:
   - job: ${{ format('Publish_mirror_{0}', platform.name) }}
     timeoutInMinutes: 0
     steps:
+    - ${{ if ne(platform.prestep, '') }}:
+      - bash: |
+          echo "test"
+        displayName: 'test1'
     - ${{ if ne(platform.targets, '') }}:
       - bash: |
           echo "pre-step ${{ platform.targets }}"
