--- a/azure-pipelines/azure-pipelines-build.yml
+++ b/azure-pipelines/azure-pipelines-build.yml
@@ -11,16 +11,16 @@ jobs:
           [ -d target ] && sudo rm -rf target
           [ -d fsroot ] && sudo rm -rf fsroot
           # Make configure
-          OPTIONS="${{ parameters.buildOptions }} PLATFORM=$PLATFORM"
+          OPTIONS="${{ parameters.buildOptions }} PLATFORM=$BUILD_NAME"
           echo "make $OPTIONS configure"
         displayName: 'Pre Step'
       - checkout: self
         #submodules: recursive
         displayName: 'Checkout code'
     postSteps:
-      - script: |
-          echo "PostStep 1"
-        displayName: "PostStep 1"
+      - publish: $(System.DefaultWorkingDirectory)/target
+        artifact: 'sonic-buildimage.${{ build.name }}'
+        displayName: "Archive sonic image"
       - script: |
           echo "PostStep 2"
         displayName: "PostStep 2"
@@ -30,7 +30,8 @@ jobs:
           echo "Run script"
         buildSteps:
         - script: |
-            echo "BuildStep 1"
+            mkdir -p target
+            echo "BuildStep 1" > target/result.log
           displayName: "BuildStep 1"
         - script: |
             echo "BuildStep 2"
