--- a/azure-pipelines/azure-pipelines-build.yml
+++ b/azure-pipelines/azure-pipelines-build.yml
@@ -16,6 +16,7 @@ jobs:
           mkdir -p target/versions
           echo "test" > target/result.log
           echo "11" > target/versions/version1.log
+          tree target
         displayName: 'Pre Step'
       - checkout: self
         #submodules: recursive
