--- a/azure-pipelines/azure-pipelines-build.yml
+++ b/azure-pipelines/azure-pipelines-build.yml
@@ -13,14 +13,16 @@ jobs:
           # Make configure
           OPTIONS="${{ parameters.buildOptions }} PLATFORM=$BUILD_NAME"
           echo "make $OPTIONS configure"
-          mkdir -p target/versions
-          echo "test" > target/result.log
-          echo "11" > target/versions/version1.log
-          find target
         displayName: 'Pre Step'
       - checkout: self
         #submodules: recursive
         displayName: 'Checkout code'
+      - script: |
+          mkdir -p target/versions
+          echo "test" > target/result.log
+          echo "11" > target/versions/version1.log
+          find target
+        displayName: 'Fake versions'
     postSteps:
       - publish: $(System.DefaultWorkingDirectory)/target
         artifact: 'sonic-buildimage.$(BUILD_NAME)'
